attempt to fix left align one liner css

--- a/static/triviolivia.css
+++ b/static/triviolivia.css
@@ -577,12 +577,15 @@ h2 {
 .question-container {
     padding: 10px 50px;
     display: flex;
+    justify-content: center; /* Centers flex children horizontally */
+    text-align: center;
     font-size: 5vw;
     font-family: "Montserrat",'American Typewriter', sans-serif;
     font-weight: 500;
     height: 50%;
     align-items: center;
     text-align: center;
+    
 }
 
 .answer-container {
